ams: tuning up ignores

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,13 @@
 *.a
 *___.F90
 *___.f90
+
+# Temp files by editors, etc
+############################
 *~
+\#*
+.\#*
+
  
 # Packages #
 ############
