now FREAL is set to $(FREAL4) this is because the CHEM_BASE libraries are compiled in 32 bit

--- a/src/Components/missions/TEMPO/GNUmakefile
+++ b/src/Components/missions/TEMPO/GNUmakefile
@@ -64,13 +64,13 @@ esma_help help:
 #                  User Defined Targets
 #                  --------------------
 
-INC_DIRS = . $(INC_MAPL_BASE) $(INC_MPI) $(INC_NETCDF) $(INC_CHEM_BASE) $(INC_MPEU) $(INC_VLIDORT90)
+INC_DIRS = . $(INC_MAPL_BASE) $(INC_MPI) $(INC_NETCDF) $(INC_CHEM_BASE) 
 USER_FMODS = $(foreach dir,$(INC_DIRS),$(M)$(dir)) 
 USER_FINCS = $(foreach dir,$(INC_DIRS),$(I)$(dir)) 
 
 vpath % $(INC_DIRS) 
 
-THIS_GFIO = GMAO_gfio_r4
+FREAL = $(FREAL4)
 
 # Python extension modules
 # ------------------------
@@ -79,11 +79,13 @@ python: $(PY_EXTS)
 %.$(F2PYEXT): %py.F90 
 	$(F2PY) -c -m $* $(M). $< 
 
-%.x: %.o sys_tracker.o
+%.x: %.o sys_tracker.o 
 	$(CC) -c sys_tracker.c
-	$(FC) $(FOPTS) $^ -o $@  $(LIB_CHEM_BASE) $(LIB_MAPL_BASE) $(LIB_MAPL_BASE_STUBS) \
-	$(LIB_MPEU) $(LIB_GFIO) $(LIB_ESMF) $(LIB_MPI) $(LIB_SDF) $(LIB_SYS) \
-	$(LIB_NETCDF) 
+
+	$(FC) $(FOPTS) $^ -o $@  $(LIB_CHEM_BASE) $(LIB_MAPL_BASE) $(LIB_MAPL_BASE_STUBS) $(LIB_MAPL_BASE_STUBS2) \
+            $(LIB_MPEU) $(LIB_CFIO) $(LIB_GFIO)  $(LIB_SDF) \
+            $(LIB_ESMF) $(LIB_MPI) $(LIB_SYS) \
+            $(LIB_NETCDF)
 
 
 # Hack to prevent remaking dep files during cleaning
