added link to VLIDORT library

--- a/src/Components/missions/TEMPO/GNUmakefile
+++ b/src/Components/missions/TEMPO/GNUmakefile
@@ -63,14 +63,20 @@ esma_help help:
 #                  --------------------
 #                  User Defined Targets
 #                  --------------------
+INC_VLIDORT90 = $(ESMADIR)/Linux/include/VLIDORT90
+LIB_VLIDORT90 = $(ESMADIR)/Linux/lib/libVLIDORT90.a
 
-INC_DIRS = . $(INC_MAPL_BASE) $(INC_MPI) $(INC_NETCDF) $(INC_CHEM_BASE) 
+INC_DIRS = . $(INC_MAPL_BASE) $(INC_MPI) $(INC_NETCDF) $(INC_CHEM_BASE) $(INC_VLIDORT90)
 USER_FMODS = $(foreach dir,$(INC_DIRS),$(M)$(dir)) 
 USER_FINCS = $(foreach dir,$(INC_DIRS),$(I)$(dir)) 
+
+
 
 vpath % $(INC_DIRS) 
 
 FREAL = $(FREAL4)
+THIS_CFIO = MAPL_cfio_r4
+THIS_GFIO = GMAO_gfio_r4
 
 # Python extension modules
 # ------------------------
@@ -79,14 +85,16 @@ python: $(PY_EXTS)
 %.$(F2PYEXT): %py.F90 
 	$(F2PY) -c -m $* $(M). $< 
 
-%.x: %.o sys_tracker.o 
-	$(CC) -c sys_tracker.c
+%.x: %.o  sys_tracker.o vlidort/VLIDORT_OMI_py.o
+	$(CC) -c sys_tracker.c $(LIB_MPI)
 
-	$(FC) $(FOPTS) $^ -o $@  $(LIB_CHEM_BASE) $(LIB_MAPL_BASE) $(LIB_MAPL_BASE_STUBS) $(LIB_MAPL_BASE_STUBS2) \
+	$(FC) $(FOPTS) $^ -o $@  $(LIB_VLIDORT90) $(LIB_CHEM_BASE) $(LIB_MAPL_BASE) $(LIB_MAPL_BASE_STUBS) $(LIB_MAPL_BASE_STUBS2) \
             $(LIB_MPEU) $(LIB_CFIO) $(LIB_GFIO)  $(LIB_SDF) \
             $(LIB_ESMF) $(LIB_MPI) $(LIB_SYS) \
             $(LIB_NETCDF)
 
+#
+#	
 
 # Hack to prevent remaking dep files during cleaning
 # --------------------------------------------------
