PC: 	modified:   geo_vlidort.rc         replaced SATNAME  with INSTNAME

--- a/src/Components/missions/TEMPO/geo_vlidort.rc
+++ b/src/Components/missions/TEMPO/geo_vlidort.rc
@@ -6,7 +6,7 @@ INDIR:   /nobackup/TEMPO
 OUTDIR:  .
 DATE: 20051231
 TIME: 17
-SATNAME: tempo
+INSTNAME: tempo
 BRDFNAME: MAIACRTLS
 BRDFDATE: 2006008
 SCALAR: false
