modified:   GNUmakefile 	PC: added LIB_ESMF to geo_angles make

--- a/src/Components/missions/TEMPO/GNUmakefile
+++ b/src/Components/missions/TEMPO/GNUmakefile
@@ -106,7 +106,7 @@ python: $(PY_EXTS)
 
 geo_angles.x: GeoAngles_py.o geo_vlidort_netcdf.o geo_angles.o
 	$(FC) $(FOPTS) $^ -o $@   $(LIB_NETCDF) $(LIB_MAPL_BASE) $(LIB_MAPL_BASE_STUBS) \
-                            $(LIB_MAPL_BASE_STUBS2) $(LIB_MPI) $(LIB_SYS)                                 
+                            $(LIB_MAPL_BASE_STUBS2) $(LIB_ESMF) $(LIB_MPI) $(LIB_SYS)                                 
                               
 
 # Hack to prevent remaking dep files during cleaning
