modified:   geo_vlidort.rc 	PC: changed the names of some brdf keys added BRDF channel centers array

--- a/src/Components/missions/TEMPO/geo_vlidort.rc
+++ b/src/Components/missions/TEMPO/geo_vlidort.rc
@@ -9,6 +9,9 @@ TIME: 17
 INSTNAME: tempo
 BRDFNAME: MAIACRTLS
 BRDFDATE: 2006008
+BRDFBAND: interpolate
+BRDFBAND_I: 4
+BRDFBAND_C: 645 858 469 555 1240 1640 2130
 SCALAR: false
 CHANNELS: 550
 CLDMAX: 0.01
