--- a/src/Components/RTSI/LIDORT3p7/sup/sleave/makefile.sleave
+++ b/src/Components/RTSI/LIDORT3p7/sup/sleave/makefile.sleave
@@ -7,7 +7,7 @@ SLEAVE_SUP_SOURCES =
 SLEAVE_LINSUP_SOURCES =
 
 SLEAVE_SUP_SOURCES +=   \
-   $(BASE_SOURCES) \
+   DEF_directory/lidort_pars.f90 \
    $(SLEAVE_PATH)/sleave_findpar.f90         \
    $(SLEAVE_PATH)/sleave_sup_inputs_def.f90  \
    $(SLEAVE_PATH)/sleave_sup_outputs_def.f90 \
@@ -16,13 +16,13 @@ SLEAVE_SUP_SOURCES +=   \
    $(SLEAVE_PATH)/sleave_sup_masters.f90     \
    $(SLEAVE_PATH)/sleave_sup_mod.f90
 
-SLEAVE_LINSUP_SOURCES += \
-   $(SLEAVE_SUP_SOURCES) \
-   $(SLEAVE_PATH)/sleave_lin_sup_inputs_def.f90  \
-   $(SLEAVE_PATH)/sleave_lin_sup_outputs_def.f90 \
-   $(SLEAVE_PATH)/sleave_lin_sup_routines.f90	 \
-   $(SLEAVE_PATH)/sleave_lin_sup_masters.f90	 \
-   $(SLEAVE_PATH)/sleave_lin_sup_mod.f90
+#SLEAVE_LINSUP_SOURCES += \
+#   $(SLEAVE_SUP_SOURCES) \
+#   $(SLEAVE_PATH)/sleave_lin_sup_inputs_def.f90  \
+#   $(SLEAVE_PATH)/sleave_lin_sup_outputs_def.f90 \
+#   $(SLEAVE_PATH)/sleave_lin_sup_routines.f90	 \
+#   $(SLEAVE_PATH)/sleave_lin_sup_masters.f90	 \
+#   $(SLEAVE_PATH)/sleave_lin_sup_mod.f90
 
 
 #
