modified:   geo_vlidort.rc 	PC: changed naming from 'BRDF' to 'SURF' to be more general

--- a/src/Components/missions/TEMPO/geo_vlidort.rc
+++ b/src/Components/missions/TEMPO/geo_vlidort.rc
@@ -3,15 +3,16 @@
 #
 
 INDIR:   /nobackup/TEMPO
-OUTDIR:  .
+OUTDIR:  ./outputs
 DATE: 20051231
 TIME: 17
 INSTNAME: tempo
-BRDFNAME: MAIACRTLS
-BRDFDATE: 2006008
-BRDFBAND: interpolate
-BRDFBAND_I: 4
-BRDFBAND_C: 645 858 469 555 1240 1640 2130
+SURFNAME: MAIACRTLS
+SURFDATE: 2006008
+SURFBAND: exact
+SURFBAND_I: 4
+SURFBAND_C: 645 858 469 555 1240 1640 2130 
+SURFBANDM: 7
 SCALAR: false
 CHANNELS: 550
 CLDMAX: 0.01
