modified:   GNUmakefile 	PC: now makes geo_vlidort_multinode

--- a/src/Components/missions/TEMPO/GNUmakefile
+++ b/src/Components/missions/TEMPO/GNUmakefile
@@ -119,7 +119,7 @@ geo_lidort.x: netcdf_helper.o geo_lidort.o
                                  $(LIB_MPEU) $(LIB_CFIO) $(LIB_GFIO) $(LIB_NETCDF) \
                                  $(LIB_ESMF) $(LIB_SDF) $(LIB_MPI) $(LIB_SYS)     
 
-test_multinode.x: netcdf_helper.o test_multinode.o 
+geo_vlidort_multinode.x: netcdf_helper.o geo_vlidort_multinode.o 
 	$(FC) $(FOPTS) $^ -o $@  $(LIB) $(LIB_VLIDORT90) $(LIB_CHEM_BASE) \
                                  $(LIB_MAPL_BASE) $(LIB_MAPL_BASE_STUBS) \
                                  $(LIB_MAPL_BASE_STUBS2) \
