modified:   Aod_EOS.rc 	PC: fixed typo

--- a/src/Components/missions/TEMPO/Aod_EOS.rc
+++ b/src/Components/missions/TEMPO/Aod_EOS.rc
@@ -15,7 +15,7 @@
 n_channels: 1
 n_moments: 300
 #r_channels: .355e-6 .532e-6 1.064e-6
-r_channels: .550-6   
+r_channels: .550e-6   
 
 # --------------------------------------------------------------
 #
