--- a/src/GMAO_Shared/GMAO_pyobs/trj_sampler.rc
+++ b/src/GMAO_Shared/GMAO_pyobs/trj_sampler.rc
@@ -1,12 +1,15 @@
 #
-# Resource file for TLE sampler
+# Example resource file for Trajectory Sampler.
 #
 
 # T,H,O3,QV: http://opendap.nccs.nasa.gov:80/dods/GEOS-5/fp/0.25_deg/assim/inst3_3d_asm_Nv
 # T,H,O3,QV: /home/adasilva/opendap/fp/opendap/assim/inst3_3d_asm_Nv
 # T,H,O3,QV: ./opendap/inst3_3d_asm_Nv
-
 #TOTEXTTAU,SLP: http://opendap.nccs.nasa.gov:80/dods/GEOS-5/fp/0.25_deg/assim/inst1_2d_hwl_Nx
 #T: http://opendap.nccs.nasa.gov:80/dods/GEOS-5/fp/0.25_deg/assim/inst3_3d_asm_Np
+#OCEXTTAUbsat,OCEXTTAUbsun:/home/adasilva/iesa/aerosol/experiments/seac4rs_01/inst1_2d_hwl_Nx.ddf
 
-OCEXTTAUbsat,OCEXTTAUbsun:/home/adasilva/iesa/aerosol/experiments/seac4rs_01/inst1_2d_hwl_Nx.ddf
+gwettop : /home/adasilva/GAAS/DEE/opendap/gwet
+w10m : /home/adasilva/GAAS/DEE/opendap/w10m
+
+
