renamed:    run_geo_vlidort_array_NNtest.py -> run_geo_vlidort_array_vnncLUT.py 	modified:   simulator/GNUmakefile 	renamed:    simulator/geo_vlidort2OS_NNTestData.F90 -> simulator/geo_vlidort_vnncLUT.F90     PC: changed name from referring to 2OS and NNtest, now it is called vnnc 'vector neural network correction', and the code refers to creating the look up table for training

--- a/src/Components/missions/TEMPO/simulator/GNUmakefile
+++ b/src/Components/missions/TEMPO/simulator/GNUmakefile
@@ -112,7 +112,7 @@ python: $(PY_EXTS)
                                  $(LIB_MPEU) $(LIB_CFIO) $(LIB_GFIO) $(LIB_NETCDF) \
                                  $(LIB_ESMF) $(LIB_SDF) $(LIB_MPI) $(LIB_SYS)
 
-geo_vlidort2OS_NNTestData.x: geo_vlidort2OS_NNTestData.o 
+geo_vlidort2OS_vnncLUT.x: geo_vlidort2OS_NNTestData.o 
 	$(FC) $(FOPTS) $^ -o $@  $(LIB) $(LIB_VLIDORT2OS) $(LIB_LIDORT3p7) $(LIB_CHEM_BASE) \
                                  $(LIB_MAPL_BASE) $(LIB_MAPL_BASE_STUBS) \
                                  $(LIB_MAPL_BASE_STUBS2) \
