--- a/src/GMAO_Shared/GMAO_pyobs/trj_sampler.rc
+++ b/src/GMAO_Shared/GMAO_pyobs/trj_sampler.rc
@@ -9,7 +9,7 @@
 #T: http://opendap.nccs.nasa.gov:80/dods/GEOS-5/fp/0.25_deg/assim/inst3_3d_asm_Np
 #OCEXTTAUbsat,OCEXTTAUbsun:/home/adasilva/iesa/aerosol/experiments/seac4rs_01/inst1_2d_hwl_Nx.ddf
 
-gwettop : /home/adasilva/GAAS/DEE/opendap/gwet
-w10m : /home/adasilva/GAAS/DEE/opendap/w10m
+#gwettop : /home/adasilva/GAAS/DEE/opendap/gwet
+#w10m : /home/adasilva/GAAS/DEE/opendap/w10m
 
-
+* : http://opendap.nccs.nasa.gov:80/dods/GEOS-5/fp/0.25_deg/fcast/inst1_2d_hwl_Nx/inst1_2d_hwl_Nx.20160430_12
