--- a/src/Components/missions/KORUS-AQ/RC/trj.fcast.CHEM.rc
+++ b/src/Components/missions/KORUS-AQ/RC/trj.fcast.CHEM.rc
@@ -2,9 +2,11 @@
 # Resource file for Trajectory Sampler. Aerosol/carbon parameters.
 #
 
-* : /home/adasilva/opendap/kaq/fcast/inst3_3d_aer_Nv.latest
-* : /home/adasilva/opendap/kaq/fcast/tavg3_2d_aer_Nx.latest
-* : /home/adasilva/opendap/kaq/fcast/tavg3_2d_adg_Nx.latest
-#
-* : /home/adasilva/opendap/kaq/fcast/inst3_3d_chm_Nv.latest
-* : /home/adasilva/opendap/kaq/fcast/tavg3_2d_chm_Nx.latest
+1) * : /home/adasilva/opendap/kaq/fcast/inst1_2d_hwl_Nx.latest
+2) * : /home/adasilva/opendap/kaq/fcast/inst3_3d_aer_Np.latest
+3) * : /home/adasilva/opendap/kaq/fcast/inst3_3d_ext_Np.latest
+4) * : /home/adasilva/opendap/kaq/fcast/inst3_3d_chm_Np.latest
+5) * : /home/adasilva/opendap/kaq/fcast/inst3_3d_tag_Np.latest
+
+
+
