--- a/src/Components/missions/KORUS-AQ/RC/trj.fcast.METEO.rc
+++ b/src/Components/missions/KORUS-AQ/RC/trj.fcast.METEO.rc
@@ -2,10 +2,10 @@
 # Resource file for Trajectory Sampler. Meteorological parameters.
 #
 
-* : /home/adasilva/opendap/kaq/fcast/tavg1_2d_slv_Nx.latest
-* : /home/adasilva/opendap/kaq/fcast/tavg1_2d_flx_Nx.latest
-* : /home/adasilva/opendap/kaq/fcast/tavg1_2d_rad_Nx.latest
-* : /home/adasilva/opendap/kaq/fcast/inst3_3d_asm_Nv.latest
+1) * : /home/adasilva/opendap/kaq/fcast/tavg1_2d_slv_Nx.latest
+2) * : /home/adasilva/opendap/kaq/fcast/tavg1_2d_flx_Nx.latest
+3) * : /home/adasilva/opendap/kaq/fcast/tavg1_2d_rad_Nx.latest
+4) * : /home/adasilva/opendap/kaq/fcast/inst3_3d_asm_Np.latest
 
 
 
