--- a/src/Components/missions/KORUS-AQ/RC/trj.fcast2.CHEM.rc
+++ b/src/Components/missions/KORUS-AQ/RC/trj.fcast2.CHEM.rc
@@ -2,11 +2,11 @@
 # Resource file for Trajectory Sampler. Aerosol/carbon parameters.
 #
 
-1) * : /home/adasilva/opendap/kaq/fcast/inst1_2d_hwl_Nx/inst1_2d_hwl_Nx.20160511_12
-2) * : /home/adasilva/opendap/kaq/fcast/inst3_3d_aer_Np/inst3_3d_aer_Np.20160511_12
-3) * : /home/adasilva/opendap/kaq/fcast/inst3_3d_ext_Np/inst3_3d_ext_Np.20160511_12
-4) * : /home/adasilva/opendap/kaq/fcast/inst3_3d_chm_Np/inst3_3d_chm_Np.20160511_12
-5) * : /home/adasilva/opendap/kaq/fcast/inst3_3d_tag_Np/inst3_3d_tag_Np.20160511_12
+1) * : /home/adasilva/opendap/kaq/fcast/inst1_2d_hwl_Nx/inst1_2d_hwl_Nx.DTG
+2) * : /home/adasilva/opendap/kaq/fcast/inst3_3d_aer_Np/inst3_3d_aer_Np.DTG
+3) * : /home/adasilva/opendap/kaq/fcast/inst3_3d_ext_Np/inst3_3d_ext_Np.DTG
+4) * : /home/adasilva/opendap/kaq/fcast/inst3_3d_chm_Np/inst3_3d_chm_Np.DTG
+5) * : /home/adasilva/opendap/kaq/fcast/inst3_3d_tag_Np/inst3_3d_tag_Np.DTG
 
 
 
