--- a/src/Components/missions/KORUS-AQ/RC/trj.fcast2.METEO.rc
+++ b/src/Components/missions/KORUS-AQ/RC/trj.fcast2.METEO.rc
@@ -2,10 +2,10 @@
 # Resource file for Trajectory Sampler. Meteorological parameters.
 #
 
-1) * : /home/adasilva/opendap/kaq/fcast/tavg1_2d_slv_Nx/tavg1_2d_slv_Nx.20160511_12
-2) * : /home/adasilva/opendap/kaq/fcast/tavg1_2d_flx_Nx/tavg1_2d_flx_Nx.20160511_12
-3) * : /home/adasilva/opendap/kaq/fcast/tavg1_2d_rad_Nx/tavg1_2d_rad_Nx.20160511_12
-4) * : /home/adasilva/opendap/kaq/fcast/inst3_3d_asm_Np/inst3_3d_asm_Np.20160511_12
+1) * : /home/adasilva/opendap/kaq/fcast/tavg1_2d_slv_Nx/tavg1_2d_slv_Nx.DTG
+2) * : /home/adasilva/opendap/kaq/fcast/tavg1_2d_flx_Nx/tavg1_2d_flx_Nx.DTG
+3) * : /home/adasilva/opendap/kaq/fcast/tavg1_2d_rad_Nx/tavg1_2d_rad_Nx.DTG
+4) * : /home/adasilva/opendap/kaq/fcast/inst3_3d_asm_Np/inst3_3d_asm_Np.DTG
 
 
 
