--- a/src/Applications/GAAS_App/ana.rc
+++ b/src/Applications/GAAS_App/ana.rc
@@ -14,16 +14,23 @@
 #                          -------------------
 
 ODS_files::
-# Active data (Note: deep blue in MYD04 is passive)
 
-${FVHOME}/obs/Level2/MOD04/Y%y4/M%m2/${EXPID}.MOD04_L2a.land.%y4%m2%d2_%h200z.ods
-${FVHOME}/obs/Level2/MOD04/Y%y4/M%m2/${EXPID}.MOD04_L2a.ocean.%y4%m2%d2_%h200z.ods
-${FVHOME}/obs/Level2/MYD04/Y%y4/M%m2/${EXPID}.MYD04_L2a.land.%y4%m2%d2_%h200z.ods
-${FVHOME}/obs/Level2/MYD04/Y%y4/M%m2/${EXPID}.MYD04_L2a.ocean.%y4%m2%d2_%h200z.ods
+# AERONET data produced off-line
 
-#misr_F12_0022.bright_tc8.obs.%y4%m2%d2.ods
-#nnr_001.patmosx_v05r02_l2a.asc.%y4%m2%d200.ods
-#nnr_001.patmosx_v05r02_l2a.des.%y4%m2%d200.ods
+/home/adasilva/iesa/aerosol/data/MERRA-2/AERONET/Y%y4/M%m2/aeronet.obs.%y4%m2%d2.ods
+
+# AVHRR Produced off-line
+#/home/adasilva/silo/GAAS/AVHRR/obs/Level2/Y%y4/M%m2/nnr_001.patmosx_v05r02_L2a.asc.%y4%m2%d2_%h200z.ods
+#/home/adasilva/silo/GAAS/AVHRR/obs/Level2/Y%y4/M%m2/nnr_001.patmosx_v05r02_L2a.des.%y4%m2%d2_%h200z.ods
+
+# Produced off-line
+
+/home/adasilva/iesa/aerosol/data/MERRA-2/MOD04//Y%y4/M%m2/nnr_002.MOD04_L2a.land.%y4%m2%d2_%h200z.ods
+/home/adasilva/iesa/aerosol/data/MERRA-2/MOD04//Y%y4/M%m2/nnr_002.MOD04_L2a.ocean.%y4%m2%d2_%h200z.ods
+/home/adasilva/iesa/aerosol/data/MERRA-2/MYD04//Y%y4/M%m2/nnr_002.MYD04_L2a.land.%y4%m2%d2_%h200z.ods
+/home/adasilva/iesa/aerosol/data/MERRA-2/MYD04//Y%y4/M%m2/nnr_002.MYD04_L2a.ocean.%y4%m2%d2_%h200z.ods
+
+#./misr_F12_0022.bright_tc8.obs.%y4%m2%d2.ods
 
 # Passive data
 #/nobackup/3/PARASOL/Level2/ODS/Y%y4/M%m2/PARASOL_L2.aero_tc8.obs.%y4%m2%d2.ods
